# figo

./: .justfile  README.md  figo-tmux.yaml  main.py  pyproject.toml
src/figo/: __init__.py
src/figo/etl/: launcher.py
src/figo/etl/extraction/: webscraper.py
src/figo/etl/loading/: database.py  models.py
src/figo/etl/transformation/: playerlinks.py  players.py
src/figo/logger/: config.py
src/figo/settings/: config.py
