[project]
name = "figo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flfontes", email = "98757275+flfontes@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.11.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "selectolax>=0.3.31",
    "sqlalchemy>=2.0.41",
]


[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pytest>=8.4.1",
]


[project.scripts]
figo = "figo:main"


[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"


[tool.ruff]
exclude = [
    '.git',
    '.venv',
]
line-length = 85
indent-width = 4


[tool.ruff.format]
quote-style = 'single'


[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']
ignore = ['E501']


[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

